# p-gpt

./: README.md  TODO.md
backend/: .gitignore  app.py  config.py  fish_tts_request.py  mistral_tts_request.py  ollama_text_gen.py  omnivoice_tts_request.py  pyproject.toml
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/components/: app-sidebar.tsx  auth-screen.tsx  parameters-dialog.tsx  persona-dialog.tsx
frontend/components/ai-elements/: agent.tsx  context.tsx  speech-input.tsx
frontend/components/ui/: sidebar.tsx  slider.tsx
frontend/lib/: backgrounds.ts  chat-history.ts  personas.ts  pocketbase.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: Chat.tsx
frontend/src/pages/Chat/: Chat.tsx
frontend/src/pages/Chat/components/: AnimatedMessageResponse.tsx  AudioMessage.tsx  index.ts  (+2 more)
frontend/src/state/: auth.ts  chat.tsx  personas.ts  preferences.ts
frontend/src/workers/: asr-worker.ts
pocketbase/: .gitignore  go.mod  main.go
pocketbase/migrations/: 1783500450_created_Personas.go  1783502216_updated_Personas.go  1784205486_created_chat_history.go  1784205508_updated_Personas.go  1784206000_opened_chat_history_api_rules.go  1784212080_updated_chat_history.go  1784212200_opened_chat_history_delete_rule.go  1784272078_updated_chat_history.go  1784272300_opened_personas_api_rules.go  1784642214_restricted_chat_history_to_owner.go  1784642683_restricted_personas_to_owner.go  1784643076_allowed_public_default_personas.go  1784644561_enabled_user_registration.go  1784646217_allowed_unverified_user_login.go
