[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.2",
    "mlflow>=3.14.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "transformers>=5.12.1",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.11.0",
]
cuda = [
    "torch>=2.11.0 ; sys_platform == 'linux' or sys_platform == 'win32'",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.fastapi]        
entrypoint = "app:app"
